feat: remove from cart button

--- a/index.html
+++ b/index.html
@@ -39,6 +39,13 @@
 
         <p v-for="size in sizes">{{ size }}</p>
 
+        <button @click="addToCart">Add to Cart</button>
+        <button @click="remove">Remove</button>
+
+        <div class="cart">
+          <p>Cart ({{cart}})</p>
+        </div>
+
       </div>
 
 
