re-watching lesson 8

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
       </div>
 
       <div class="product-info">
-        <h1>{{ product }}</h1>
+        <h1>{{ title }}</h1>
         <p>{{ description }}</p>
         <span v-show="onSale" style="color: green">On Sale!</span>
         <a :href="link">Other styles</a>
