--- a/index.html
+++ b/index.html
@@ -20,9 +20,9 @@
         <p>{{ description }}</p>
         <span v-show="onSale" style="color: green">On Sale!</span>
         <a :href="link">Other styles</a>
-        <p v-if="inventory > 10 && inStock">In Stock</p>
-      <p v-else-if="inventory <= 10 && inventory > 0 && inStock" :style="red">Almost Sold Out!</p>
-        <p v-else :class="{ line: !inStock}">Out of Stock</p>
+        <p v-if="quantity > 10">In Stock</p>
+      <p v-else-if="quantity <= 10 && quantity> 0" :style="red">Almost Sold Out!</p>
+        <p class='line' v-else>Out of Stock</p>
         <ul>
           <li v-for="detail in details">
             {{detail}}
@@ -30,10 +30,10 @@
         </ul>
 
         <div class="color-box"
-             v-for="variant in variants"
+             v-for="(variant, i) in variants"
              :key="variant.variantId"
              :style="{ backgroundColor: variant.variantColor }"
-             @mouseover="handleChange(variant.variantImage)"
+             @mouseover="handleChange(i)"
         >
         </div>
 
