--- a/index.html
+++ b/index.html
@@ -18,8 +18,7 @@
       <div class="product-info">
         <h1>{{ title }}</h1>
         <p>{{ description }}</p>
-        <span v-show="onSale" style="color: green">On Sale!</span>
-        <a :href="link">Other styles</a>
+      <span v-show="onSale" class="sale">{{nowOnSale}}</span>
         <p v-if="quantity > 10">In Stock</p>
       <p v-else-if="quantity <= 10 && quantity> 0" :style="red">Almost Sold Out!</p>
         <p class='line' v-else>Out of Stock</p>
