--- a/index.html
+++ b/index.html
@@ -10,49 +10,7 @@
   <div class="nav-bar"></div>
 
   <div id="app">
-    <div class="product">
-      <div class="product-image">
-        <img :src="image" />
-      </div>
-
-      <div class="product-info">
-        <h1>{{ title }}</h1>
-        <p>{{ description }}</p>
-      <span v-show="onSale" class="sale">{{nowOnSale}}</span>
-        <p v-if="quantity > 10">In Stock</p>
-      <p v-else-if="quantity <= 10 && quantity> 0" :style="red">Almost Sold Out!</p>
-        <p class='line' v-else>Out of Stock</p>
-        <ul>
-          <li v-for="detail in details">
-            {{detail}}
-          </li>
-        </ul>
-
-        <div class="color-box"
-             v-for="(variant, i) in variants"
-             :key="variant.variantId"
-             :style="{ backgroundColor: variant.variantColor }"
-             @mouseover="handleChange(i)"
-        >
-        </div>
-
-        <p v-for="size in sizes">{{ size }}</p>
-
-        <button @click="addToCart"
-                :disabled="!inStock"
-                :class="{disabledButton : !inStock}"
-        >Add to Cart</button>
-        <button @click="remove">Remove</button>
-
-        <div class="cart">
-          <p>Cart ({{cart}})</p>
-        </div>
-
-      </div>
-
-
-
-    </div>
+    <product :premium="premium"></product>
   </div>
 
   <script src="https://cdn.jsdelivr.net/npm/vue"></script>
