--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <div class="nav-bar"></div>
 
   <div id="app">
-    <product :premium="premium"></product>
+    <product :details="details" :premium="premium"></product>
   </div>
 
   <script src="https://cdn.jsdelivr.net/npm/vue"></script>
